Blog: Adding the head of index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
+  <!--HEAD START-->
   <head>
+
     <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <meta name="author" content="Woody Lo, Woody Luo, 羅文成">
+    <meta name="thumbnail" content="https://woodyluo.github.io/blog/static/img/blog_img.png">
+
+    <!--Setting Facebook sharing tag by using define Open Gragp protocol -->
+    <meta property="og:site_name" content="Woody Lo's Blog">
+    <meta property="og:title" content="Woody Lo's Blog">
+    <meta property="og:description" content="Woody Lo的部落格，包括自我介紹與一些程式教學。">
+    <meta property="og:img" content="https://woodyluo.github.io/blog/static/img/description/blog_img.png">
+    <meta property="og:url" content="https://woodyluo.github.io/blog/">
+    <meta property="og:type" content="article">
+
+    <!--Setting Twitter sharing tag -->
+    <meta name="twitter:title" content="Woody Lo's Blog">
+    <meta name="twitter:description" content="Woody Lo的部落格，包括自我介紹與一些程式教學。">
+    <meta name="twitter:image" content="https://woodyluo.github.io/blog/static/img/description/blog_img.png">
+
+    <!-- Adding and setting icon and title for website -->
+    <link ref="shortcut icon" href="https://woodyluo.github.io/blog/static/img/description/tab_icon.ico">
+    <title>Woody Lo's Blog</title>
+
   </head>
+  <!--HEAD END-->
+
   <body>
     <h1>Woody Lo</h1>
   </body>
