--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="https://woodyluo.github.io/blog/static/img/description/blog_img.png">
 
     <!-- Adding and setting icon and title for website -->
-    <link ref="shortcut icon" href="static/img/description/tab_icon.ico">
+    <link ref="shortcut icon" type="image/x-icon" href="static/img/description/tab_icon.ico">
 
     <title>Woody Lo's Blog</title>
 
