--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
 
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
     <meta name="author" content="Woody Lo, Woody Luo, 羅文成">
     <meta name="thumbnail" content="https://woodyluo.github.io/blog/static/img/blog_img.png">
 
