--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <meta name="twitter:image" content="https://woodyluo.github.io/blog/static/img/description/blog_img.png">
 
     <!-- Adding and setting icon and title for website -->
-    <link ref="shortcut icon" type="image/x-icon" href="/static/img/description/tab_icon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/description/tab_icon_64x64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/description/tab_icon_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/description/tab_icon_16x16.png">
 
     <title>Woody Lo's Blog</title>
 
