--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html>
+
+<!-- Assign language type -->
+<html lang="zh-TW">
   <!--HEAD START-->
   <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit" />
+
+    <!-- Reset website's for fitting device screen size (RWD init setting) -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <meta name="author" content="Woody Lo, Woody Luo, 羅文成">
     <meta name="thumbnail" content="https://woodyluo.github.io/blog/static/img/blog_img.png">
+
+    <!-- Adding and setting icon and title for website -->
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/description/tab_icon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/description/tab_icon_64x64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/description/tab_icon_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/img/description/tab_icon_16x16.png">
 
     <!--Setting Facebook sharing tag by using define Open Gragp protocol -->
     <meta property="og:site_name" content="Woody Lo's Blog">
@@ -25,9 +35,9 @@
     <meta name="twitter:image" content="https://woodyluo.github.io/blog/static/img/description/blog_img.png">
 
     <!-- Adding and setting icon and title for website -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/description/tab_icon_64x64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/description/tab_icon_32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/description/tab_icon_16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/description/tab_icon_64x64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/description/tab_icon_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/img/description/tab_icon_16x16.png">
 
     <title>Woody Lo's Blog</title>
 
@@ -35,6 +45,14 @@
   <!--HEAD END-->
 
   <body>
-    <h1>Woody Lo</h1>
+    <h1>Woody Lo's Blog</h1>
+    <br>
+    <br>
+    <p>
+      大家好，我是<p class="tip">文成</p>。
+    </p>
+    <p>
+      目前於國立台灣師範大學科技系擔任研究助理。
+    </p>
   </body>
 </html>
