--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     <br>
     <br>
     <p>
-      大家好，我是<p class="tip">文成</p>。
+      大家好，我是
     </p>
+    <p class="tip">文成</p>
     <p>
       目前於國立台灣師範大學科技系擔任研究助理。
     </p>
