--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/description/tab_icon_16x16.png">
 
     <title>Woody Lo's Blog</title>
-    <link ref="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <!--HEAD END-->
 
@@ -48,7 +48,7 @@
     <h1>Woody Lo's Blog</h1>
     <br>
     <br>
-    <p>
+    <p style="display:inline">
       大家好，我是
     </p>
     <p class="tip">文成</p>
