--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="author" content="Woody Lo, Woody Luo, 羅文成">
     <meta name="thumbnail" content="https://woodyluo.github.io/blog/static/img/blog_img.png">
 
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <!-- Adding and setting icon and title for website -->
     <link rel="shortcut icon" type="image/x-icon" href="static/img/description/tab_icon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="static/img/description/tab_icon_64x64.png">
@@ -40,7 +42,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/description/tab_icon_16x16.png">
 
     <title>Woody Lo's Blog</title>
-    <link rel="stylesheet" href="css/style.css">
+    
   </head>
   <!--HEAD END-->
 
