--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
   <body>
     <h1>Woody Lo's Blog</h1>
     <br>
+    <hr>
     <br>
-    <p style="display:inline">
+    <p style="display:inline;">
       大家好，我是
     </p>
-    <p class="tip">文成</p>
+    <p class="tip">
+    文成
+    </p>
     <p>
       目前於國立台灣師範大學科技系擔任研究助理。
     </p>
