--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body>
     <h1>Woody Lo's Blog</h1>
     <br>
-    <hr>
+    <hr class="style-one">
     <br>
     <p style="display:inline;">
       大家好，我是
