--- a/index.html
+++ b/index.html
@@ -51,14 +51,33 @@
     <br>
     <hr class="style-one">
     <br>
-    <p style="display:inline;">
-      大家好，我是
-    </p>
+    <p style="display:inline;">大家好，我是</p>
     <p class="tip">
     文成
     </p>
     <p>
       目前於國立台灣師範大學科技系擔任研究助理。
+    </p>
+    <style type="text/css">
+      p { 
+        font-size:14px; 
+        color:#538b01; 
+        font-weight:bold; 
+        font-style:italic;
+      }
+      .date {
+        color: #ff0000;
+      }
+      .season { /* OK, a bit contrived... */
+        color: #0000a0;
+      }
+    </style>
+    <p>
+      Enter the competition by 
+      <span class="date">January 30, 2011</span>
+      and you could win up to $$$$ — including amazing 
+      <span class="season">summer</span> 
+      trips!
     </p>
   </body>
 </html>
