Blog: JavaScript Test.

--- a/index.html
+++ b/index.html
@@ -79,5 +79,12 @@
       <span class="season">summer</span> 
       trips!
     </p>
+
+    <script type="text/javascript">
+    var name="Woody";
+    console.log(name);
+    echo( name ); 
+    </script>>
+
   </body>
 </html>
