Blog: JavaScript Test.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
     <script type="text/javascript">
     var name="Woody";
     console.log(name);
-    echo( name ); 
-    </script>>
+    </script>
 
   </body>
 </html>
